2004-07-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b234

	* 978315: Add 'onsubmit' flags to disable the submit buttons on
	  critical forms to prevent double-clicking.

	* Change: Fix syntax error in adv_search.php (even though we're
	  not using it yet)

2004-07-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b233

	* 969218: Attempt to prevent detection of binaries that don't
	  actually exist.  Make sure the located path is not empty.

	* Change: Whitespace, don't call phpversion() again, it's already
	  in a local variable.

2004-07-01  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b232

	* Fix: html_entity_decode doesnt support utf-8

2004-06-30  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b231

	* Change: Minor opt to numVisibleItems() - cache the uid of the
	  user, instead of calling getUid() inside the loop.

2004-06-30  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b230

	* Change: Text changes, made some untranslateable phrases translateable, 
		  changed \" to &quot; in translateable texts.

2004-06-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b229

	* Change: Correct < > to HTML encoding in button text

	* Change: Disable tab navigation until page is loaded to prevent
	  JS errors

	* Change: Text casing fix

2004-06-29  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b228

	* Change: Move adminCommentsEmail and adminOtherChangesEmail into
	  the email section of the config wizard and unhide them.

2004-06-29  Jens Tkotz <jens@peino.de> 1.4.4-cvs-b227

	* Fix: In Linux, PHP with gettext and only system locales installed
	       that maybe fit (en_US.utf8 or de_DE.ISOwhatever) 
	       config reported that no suitable locales where found.

	* Change: Enhancements for locale aliases. Empty values are allowed and will be removed from config.
		  ***** This needs testing !! *****

2004-06-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b226

	* Change: view_album - variable name conflict
