@@ -1,3 +1,8 @@
+2004-07-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b235
+
+	* Change: Don't recursively run through each album to find albums
+	  requiring upgrades when we already have a complete list...
+
 2004-07-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b234
 
 	* 978315: Add 'onsubmit' flags to disable the submit buttons on
